--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 {
   "name": "ejc-sfc-gestao",
   "private": true,
-  "version": "1.3.0",
+  "version": "1.6.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,15 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "lucide-react": "^0.463.0",
     "recharts": "^2.15.0",
-    "firebase": "^11.1.0"
+    "firebase": "^11.1.0",
+    "@google/genai": "^0.21.0"
   },
   "devDependencies": {
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
     "vite": "^6.0.0",
     "terser": "^5.37.0",
